--- a/unaspmobile/apps/unaspmobile/common/index.html
+++ b/unaspmobile/apps/unaspmobile/common/index.html
@@ -17,87 +17,133 @@
 <script src="jqueryMobile/jquery.mobile-git.js"></script>
 </head>
 <body style="display: none;">
-	<div data-role="page" id="login">
-		<div data-role="header" id="header-login">
-			<div class="top-login">
-				<span class="part1">UNASP</span><span class="part2">MOBILE</span>
-				<h5>Engenheiro Coelho</h5>
-			</div>
-			<div class="back-login">
-				<img src="images/shape.png">
-			</div>
-			<div class="logo">
-				<img src="images/logo_unasp.png">
-			</div>
+	<div data-role="header" id="header-menu" data-position="fixed"
+		data-fullscreen="true"
+		style="position: fixed; z-index: 9999; width: 100%; margin: 0">
+		<div class="botoes-menu">
+			<ul class="ui-grid-d ui-content">
+				<li class="ui-block-a"><a href="./security/login.html"
+					data-transition="slide"><img src="images/logo_mini.png"></a></li>
+				<li class="ui-block-b"><a href="#perfil"
+					data-transition="slide" data-ajax="false"><img
+						src="images/icones/user.png"></a></li>
+				<li class="ui-block-c"><a href="#notas" data-transition="slide"
+					data-ajax="false"><img src="images/icones/notas.png"></a></li>
+				<li class="ui-block-d"><a href="#financeiro"
+					data-transition="slide" data-ajax="false"><img
+						src="images/icones/financeiro.png"></a></li>
+				<li class="ui-block-e"><a href="#ramais" data-ajax="false"
+					data-transition="slide"><img src="images/icones/ramal.png"></a></li>
+			</ul>
 		</div>
+	</div>
 
-		<div data-role="content" id="content-login" style="padding: 15px">
-			<form id="form" action="">
-				<label for="text">Login:</label><input type="text" name="user"
-					id="user"> <label for="text">Senha:</label><input
-					type="text" name="password" id="password"> <a href="#"
-					data-role="button" href="#perfil" id="entrar">Entrar</a>
-			</form>
+	<div data-role="page" id="perfil">
+		<div data-role="header" class="header-pages" data-position="fixed"
+			style="">
+			<ul class="titulo">
+				<li><img src="images/icones/user.png"></li>
+				<li>Perfil</li>
+			</ul>
+		</div>
+		<div  data-role="content"class="content-perfil">
+			<div class="indentify">
+				<ul data-role="listview" data-inset="true">
+					<li><img src="images/icones/user.png">
+						<h3>Jonas Padilha Rodrigues</h3>
+						<p>jonas@agzoom.com.br</p></li>
+				</ul>
+			</div>
+			<div class="ui-grid-solo options" style="max-width: 400px;">
+				<div class=" ui-block-a options">
+					<select name="select" id="select"><option value="option">Cursos
+							Matriculados</option></select>
+				</div>
+				<br>
+				<div class=" ui-block-a options">
+					<select name="select" id="select"><option value="option">Unasp
+							Virtual</option></select>
+				</div>
+					<br>
+				<div class=" ui-block-a options">
+					<select name="select" id="select"><option value="option">Notificações
+						</option></select>
+				</div>
+			</div>
 
 		</div>
-		<div id="bar">
+		<div data-role="footer" data-position="fixed" id="footer-login"
+			class="header-pages">
+			<h3>Footer</h3>
+		</div>
+		<div id="bar" style="position: fixed;">
 			<a href="#" data-role="button" data-corners="false"
 				data-shadow="false" data-iconshadow="false"></a>
 		</div>
-		<div data-role="footer" data-position="fixed" id="footer-login">
-			<h3>Footer</h3>
-		</div>
 	</div>
-	<div data-role="page" id="perfil">
-		<div data-role="header" id="header-menu" data-position="fixed">
-			<div data-role="navbar">
-				<ul>
-					<li><a href="#" id="perfil" class="btn-header-menu"><img src="images/icones/user.png"></a></li>
-					<li><a href="#" id="notas" class="btn-header-menu"><img src="images/icones/notas.png"></a></li>
-					<li><a href="#" id="financeiro" class="btn-header-menu"><img src="images/icones/financeiro.png"></a></li>
-					<li><a href="#" id="ramais" class="btn-header-menu"><img src="images/icones/ramal.png"></a></li>
-					<li><a href="#" id="news" class="btn-header-menu"><img src="images/icones/news.png"></a></li>
-				</ul>
-	</div>
-		</div>
-		<div data-role="content" style="padding: 15px"></div>
-		<div data-role="footer" data-position="fixed" id="footer">
-			<h3>Footer</h3>
-		</div>
-	</div>
+
+
 
 	<div data-role="page" id="notas">
-		<div data-role="header" id="" data-position="fixed">
-			<div id="navbar">
-				<ul>
-					<li><a href="#notas" id="item">Item</a></li>
-				</ul>
-			</div>
+		<div data-role="header" id="header" data-position="fixed"
+			class="header-pages">
+			<ul class="titulo">
+				<li><img src="images/icones/notas.png"></li>
+				<li>Notas e Faltas</li>
+			</ul>
 		</div>
 		<div data-role="content" style="padding: 15px"></div>
-		<div data-role="footer" data-position="fixed" id="footer">
+		<div data-role="footer" data-position="fixed" id="footer-login"
+			class="header-pages">
 			<h3>Footer</h3>
 		</div>
+		<div id="bar" style="position: fixed;">
+			<a href="#" data-role="button" data-corners="false"
+				data-shadow="false" data-iconshadow="false"></a>
+		</div>
 	</div>
-
 
 
 	<div data-role="page" id="financeiro">
-		<div data-role="header" id="header" data-position="fixed"></div>
+		<div data-role="header" id="header" data-position="fixed"
+			class="header-pages">
+			<ul class="titulo">
+				<li><img src="images/icones/financeiro.png"></li>
+				<li>Financeiro</li>
+			</ul>
+		</div>
 		<div data-role="content" style="padding: 15px"></div>
-		<div data-role="footer" data-position="fixed" id="footer">
+		<div data-role="footer" data-position="fixed" id="footer-login"
+			class="header-pages">
 			<h3>Footer</h3>
 		</div>
+		<div id="bar" style="position: fixed;">
+			<a href="#" data-role="button" data-corners="false"
+				data-shadow="false" data-iconshadow="false"></a>
+		</div>
 	</div>
+
 	<div data-role="page" id="ramais">
-		<div data-role="header" id="header" data-position="fixed">
-			<h3>Header</h3>
+		<div data-role="header" id="header" data-position="fixed"
+			class="header-pages">
+			<ul class="titulo">
+				<li><img src="images/icones/ramal.png"></li>
+				<li>Ramais</li>
+			</ul>
 		</div>
 		<div data-role="content" style="padding: 15px"></div>
-		<div data-role="footer" data-position="fixed" id="footer">
+		<div data-role="footer" data-position="fixed" id="footer-login"
+			class="header-pages">
 			<h3>Footer</h3>
 		</div>
+		<div id="bar" style="position: fixed;">
+			<a href="#" data-role="button" data-corners="false"
+				data-shadow="false" data-iconshadow="false"></a>
+		</div>
 	</div>
+
+
+
 	<script src="js/initOptions.js"></script>
 	<script src="js/main.js"></script>
 	<script src="js/messages.js"></script>
