--- a/unaspmobile/apps/unaspmobile/common/index.html
+++ b/unaspmobile/apps/unaspmobile/common/index.html
@@ -60,14 +60,15 @@
 			</form>
 
 		</div>
-		<div id="bar">
-			<a href="#" data-role="button" data-corners="false"
-				data-shadow="false" data-iconshadow="false"></a>
-		</div>
 		<div data-role="footer" data-position="fixed" id="footer-login"
-			style="z-index: 1; width: 100%;">
+			class="header-pages">
 			<h3>Footer</h3>
 		</div>
+		<div class="bar" style="position: fixed;">
+			<a href="#"  data-role="button" data-corners="false"
+				data-shadow="false" data-iconshadow="false"></a>
+		</div>
+		
 	</div>
 	<div data-role="page" id="perfil">
 		<div data-role="header" class="header-pages" data-position="fixed"
@@ -107,8 +108,8 @@
 			class="header-pages">
 			<h3>Footer</h3>
 		</div>
-		<div id="bar" style="position: fixed;">
-			<a href="#" data-role="button" data-corners="false"
+		<div class="bar" style="position: fixed;">
+			<a href="#"  data-role="button" data-corners="false"
 				data-shadow="false" data-iconshadow="false"></a>
 		</div>
 	</div>
@@ -122,12 +123,12 @@
 			</ul>
 		</div>
 		<div data-role="content" style="padding: 15px"></div>
-		<div data-role="footer" data-position="fixed" id="footer-login"
+	<div data-role="footer" data-position="fixed" id="footer-login"
 			class="header-pages">
 			<h3>Footer</h3>
 		</div>
-		<div id="bar" style="position: fixed;">
-			<a href="#" data-role="button" data-corners="false"
+		<div class="bar" style="position: fixed;">
+			<a href="#"  data-role="button" data-corners="false"
 				data-shadow="false" data-iconshadow="false"></a>
 		</div>
 	</div>
@@ -142,12 +143,12 @@
 			</ul>
 		</div>
 		<div data-role="content" style="padding: 15px"></div>
-		<div data-role="footer" data-position="fixed" id="footer-login"
+	<div data-role="footer" data-position="fixed" id="footer-login"
 			class="header-pages">
 			<h3>Footer</h3>
 		</div>
-		<div id="bar" style="position: fixed;">
-			<a href="#" data-role="button" data-corners="false"
+		<div class="bar" style="position: fixed;">
+			<a href="#"  data-role="button" data-corners="false"
 				data-shadow="false" data-iconshadow="false"></a>
 		</div>
 	</div>
@@ -165,8 +166,8 @@
 			class="header-pages">
 			<h3>Footer</h3>
 		</div>
-		<div id="bar" style="position: fixed;">
-			<a href="#" data-role="button" data-corners="false"
+		<div class="bar" style="position: fixed;">
+			<a href="#"  data-role="button" data-corners="false"
 				data-shadow="false" data-iconshadow="false"></a>
 		</div>
 	</div>
