curso perfil ok

--- a/unaspmobile/apps/unaspmobile/common/index.html
+++ b/unaspmobile/apps/unaspmobile/common/index.html
@@ -88,18 +88,30 @@
 			</div>
 			<div class="ui-grid-solo options" style="max-width: 400px;">
 				<div class=" ui-block-a options">
-					<select name="select" id="select"><option value="option">Cursos
-							Matriculados</option></select>
+					<div  data-role="collapsible" data-collapsed-icon="carat-d" data-expanded-icon="carat-u" id="cursos-matriculados">
+					<h3>Cursos Matriculados</h3>
+					<ul>
+					</ul>
+					</div>
 				</div>
 				<br>
 				<div class=" ui-block-a options">
-					<select name="select" id="select"><option value="option">Unasp
-							Virtual</option></select>
+					<div  data-role="collapsible" data-collapsed-icon="carat-d" data-expanded-icon="carat-u">
+					<h3>Unasp Virtual</h3>
+					<ul>
+					<li>Sistemas Para Internet</li>
+					<li>Direito</li>
+					</ul>
+					</div>
 				</div>
 				<br>
 				<div class=" ui-block-a options">
-					<select name="select" id="select"><option value="option">Notificações
-						</option></select>
+					<div data-role="collapsible" data-collapsed-icon="carat-d" data-expanded-icon="carat-u">
+					<h3>Notificações</h3>
+					<ul>
+					<li>Nova Atualização</li>
+					</ul>
+					</div>
 				</div>
 			</div>
 
@@ -175,6 +187,7 @@
 
 	<script src="js/main.js"></script>
 	<script src="js/functions.js"></script>
+	<script src="js/controller/controller-notas.js"></script>
 	<script src="js/auth.js"></script>
 	<script src="js/initOptions.js"></script>
 	<script src="js/messages.js"></script>
