--- a/unaspmobile/apps/unaspmobile/common/index.html
+++ b/unaspmobile/apps/unaspmobile/common/index.html
@@ -11,6 +11,7 @@
     		-->
 <link href="jqueryMobile/jquery.mobile-git.css" rel="stylesheet">
 <link rel="stylesheet" href="css/main.css">
+<link rel="stylesheet" href="css/unaspmobile-theme.css">
 <script>
 	window.$ = window.jQuery = WLJQ;
 </script>
@@ -22,17 +23,15 @@
 		style="position: fixed; z-index: 9999; width: 100%; margin: 0">
 		<div class="botoes-menu">
 			<ul class="ui-grid-d ui-content">
-				<li class="ui-block-a"><a href=""
-					data-transition="slide"><img src="images/logo_mini.png"></a></li>
+				<li class="ui-block-a"><a href="" data-transition="slide"><img
+						src="images/logo_mini.png"></a></li>
 				<li class="ui-block-b"><a href="#perfil"
-					data-transition="slide" data-ajax="false"><img
-						src="images/icones/user.png"></a></li>
-				<li class="ui-block-c"><a href="#notas" data-transition="slide"
-					data-ajax="false"><img src="images/icones/notas.png"></a></li>
+					data-transition="slide"><img src="images/icones/user.png"></a></li>
+				<li class="ui-block-c"><a href="#notas" data-transition="slide"><img
+						src="images/icones/notas.png"></a></li>
 				<li class="ui-block-d"><a href="#financeiro"
-					data-transition="slide" data-ajax="false"><img
-						src="images/icones/financeiro.png"></a></li>
-				<li class="ui-block-e"><a href="#ramais" data-ajax="false"
+					data-transition="slide"><img src="images/icones/financeiro.png"></a></li>
+				<li class="ui-block-e"><a href="#ramais"
 					data-transition="slide"><img src="images/icones/ramal.png"></a></li>
 			</ul>
 		</div>
@@ -55,8 +54,8 @@
 			<form id="form" action="">
 				<label for="text">Login:</label><input type="text" name="user"
 					id="user"> <label for="text">Senha:</label><input
-					type="password" name="password" id="password"> <a href="#"
-					data-role="button" id="entrar">Entrar</a>
+					type="password" name="password" id="password"> <a
+					href="#notas" data-role="button" id="entrar">Entrar</a>
 			</form>
 
 		</div>
@@ -65,10 +64,10 @@
 			<h3>Footer</h3>
 		</div>
 		<div class="bar" style="position: fixed;">
-			<a href="#"  data-role="button" data-corners="false"
+			<a href="#" data-role="button" data-corners="false"
 				data-shadow="false" data-iconshadow="false"></a>
 		</div>
-		
+
 	</div>
 	<div data-role="page" id="perfil">
 		<div data-role="header" class="header-pages" data-position="fixed"
@@ -78,7 +77,7 @@
 				<li>Perfil</li>
 			</ul>
 		</div>
-		<div data-role="content" class="content-perfil">
+		<div data-role="content" class="content-unaspmobile">
 			<div class="indentify">
 				<ul data-role="listview" data-inset="true">
 					<li><img src="images/icones/user.png">
@@ -88,29 +87,32 @@
 			</div>
 			<div class="ui-grid-solo options" style="max-width: 400px;">
 				<div class=" ui-block-a options">
-					<div  data-role="collapsible" data-collapsed-icon="carat-d" data-expanded-icon="carat-u" id="cursos-matriculados">
-					<h3>Cursos Matriculados</h3>
-					<ul>
-					</ul>
+					<div data-role="collapsible" data-collapsed-icon="carat-d"
+						data-expanded-icon="carat-u" id="cursos-matriculados">
+						<h3>Cursos Matriculados</h3>
+						<ul>
+						</ul>
 					</div>
 				</div>
 				<br>
 				<div class=" ui-block-a options">
-					<div  data-role="collapsible" data-collapsed-icon="carat-d" data-expanded-icon="carat-u">
-					<h3>Unasp Virtual</h3>
-					<ul>
-					<li>Sistemas Para Internet</li>
-					<li>Direito</li>
-					</ul>
+					<div data-role="collapsible" data-collapsed-icon="carat-d"
+						data-expanded-icon="carat-u">
+						<h3>Unasp Virtual</h3>
+						<ul>
+							<li>Sistemas Para Internet</li>
+							<li>Direito</li>
+						</ul>
 					</div>
 				</div>
 				<br>
 				<div class=" ui-block-a options">
-					<div data-role="collapsible" data-collapsed-icon="carat-d" data-expanded-icon="carat-u">
-					<h3>Notificações</h3>
-					<ul>
-					<li>Nova Atualização</li>
-					</ul>
+					<div data-role="collapsible" data-collapsed-icon="carat-d"
+						data-expanded-icon="carat-u">
+						<h3>Notificações</h3>
+						<ul>
+							<li>Nova Atualização</li>
+						</ul>
 					</div>
 				</div>
 			</div>
@@ -121,7 +123,7 @@
 			<h3>Footer</h3>
 		</div>
 		<div class="bar" style="position: fixed;">
-			<a href="#"  data-role="button" data-corners="false"
+			<a href="#" data-role="button" data-corners="false"
 				data-shadow="false" data-iconshadow="false"></a>
 		</div>
 	</div>
@@ -134,13 +136,20 @@
 				<li>Notas e Faltas</li>
 			</ul>
 		</div>
-		<div data-role="content" style="padding: 15px"></div>
-	<div data-role="footer" data-position="fixed" id="footer-login"
+		<div data-role="content" class="content-unaspmobile"
+			style="padding: 15px">
+		
+			<select name="select" id="select" style="background-color: #dbdad8; color:#8b8a89">
+			<option value="option">Cursos Matriculados</option>
+			</select>
+
+		</div>
+		<div data-role="footer" data-position="fixed" id="footer-login"
 			class="header-pages">
 			<h3>Footer</h3>
 		</div>
 		<div class="bar" style="position: fixed;">
-			<a href="#"  data-role="button" data-corners="false"
+			<a href="#" data-role="button" data-corners="false"
 				data-shadow="false" data-iconshadow="false"></a>
 		</div>
 	</div>
@@ -154,13 +163,14 @@
 				<li>Financeiro</li>
 			</ul>
 		</div>
-		<div data-role="content" style="padding: 15px"></div>
-	<div data-role="footer" data-position="fixed" id="footer-login"
+		<div data-role="content" class="content-unaspmobile"
+			style="padding: 15px"></div>
+		<div data-role="footer" data-position="fixed" id="footer-login"
 			class="header-pages">
 			<h3>Footer</h3>
 		</div>
 		<div class="bar" style="position: fixed;">
-			<a href="#"  data-role="button" data-corners="false"
+			<a href="#" data-role="button" data-corners="false"
 				data-shadow="false" data-iconshadow="false"></a>
 		</div>
 	</div>
@@ -173,21 +183,20 @@
 				<li>Ramais</li>
 			</ul>
 		</div>
-		<div data-role="content" style="padding: 15px"></div>
+		<div data-role="content" class="content-unaspmobile"
+			style="padding: 15px"></div>
 		<div data-role="footer" data-position="fixed" id="footer-login"
 			class="header-pages">
 			<h3>Footer</h3>
 		</div>
 		<div class="bar" style="position: fixed;">
-			<a href="#"  data-role="button" data-corners="false"
+			<a href="#" data-role="button" data-corners="false"
 				data-shadow="false" data-iconshadow="false"></a>
 		</div>
 	</div>
-
-
 	<script src="js/main.js"></script>
 	<script src="js/functions.js"></script>
-	<script src="js/controller/controller-notas.js"></script>
+	<script src="js/controller/perfil.js"></script>
 	<script src="js/auth.js"></script>
 	<script src="js/initOptions.js"></script>
 	<script src="js/messages.js"></script>
