--- a/unaspmobile/apps/unaspmobile/common/index.html
+++ b/unaspmobile/apps/unaspmobile/common/index.html
@@ -163,7 +163,6 @@
 			</div>
 
 
-
 			</div>
 			<div class="cabecalho_cursos">
 				<table style="width: 100%; padding: 5px;" class='ui-responsive'>
@@ -225,7 +224,9 @@
 
 	<script src="js/main.js"></script>
 	<script src="js/functions.js"></script>
+	<script src="js/view/notas.js"></script>
 	<script src="js/controller/perfil.js"></script>
+	<script src="js/controller/notas.js"></script>
 	<script src="js/auth.js"></script>
 	<script src="js/initOptions.js"></script>
 	<script src="js/messages.js"></script>
