options curso e periodo funcionando

--- a/unaspmobile/apps/unaspmobile/common/index.html
+++ b/unaspmobile/apps/unaspmobile/common/index.html
@@ -140,23 +140,23 @@
 			style="padding: 15px">
 			<div class="seleciona_curso" style="margin: 0; position: relative;">
 				<div class="ui-grid-a">
-				<div class="ui-block-a" id='id'>
+				<div class="ui-block-a">
 					<select id="curso" class="opcoes-notas">
 						<option selected value=''>Curso:</option>
 					</select>
 				</div>
-				<div id="turma" class="ui-block-b">
-					<select class="opcoes-notas">
+				<div class="ui-block-b">
+					<select id="turma" class="opcoes-notas">
 						<option value=''>Turma:</option>
 					</select>
 				</div>
-				<div id="periodo" class="ui-block-a">
-					<select class="opcoes-notas">
+				<div  class="ui-block-a">
+					<select id="periodo" class="opcoes-notas">
 						<option selected>Periodo:</option>
 					</select>
 				</div>
-				<div id="disciplina" class="ui-block-b">
-					<select class="opcoes-notas">
+				<div  class="ui-block-b">
+					<select id="disciplina" class="opcoes-notas">
 						<option selected>Disciplina:</option>
 					</select>
 				</div>
