--- a/unaspmobile/apps/unaspmobile/common/index.html
+++ b/unaspmobile/apps/unaspmobile/common/index.html
@@ -140,41 +140,40 @@
 			style="padding: 15px">
 			<div class="seleciona_curso" style="margin: 0; position: relative;">
 				<div class="ui-grid-a">
-				<div class="ui-block-a">
-					<select id="curso" class="opcoes-notas">
-						<option selected value=''>Curso:</option>
-					</select>
+					<div class="ui-block-a">
+						<select id="curso" class="opcoes-notas">
+							<option selected value=''>Curso:</option>
+						</select>
+					</div>
+					<div class="ui-block-b">
+						<select id="turma" class="opcoes-notas">
+							<option selected>Turma:</option>
+						</select>
+					</div>
+					<div class="ui-block-a">
+						<select id="periodo" class="opcoes-notas">
+							<option selected>Periodo:</option>
+						</select>
+					</div>
+					<div class="ui-block-b">
+						<select id="disciplina" class="opcoes-notas">
+							<option selected>Disciplina:</option>
+						</select>
+					</div>
 				</div>
-				<div class="ui-block-b">
-					<select id="turma" class="opcoes-notas">
-						<option value=''>Turma:</option>
-					</select>
-				</div>
-				<div  class="ui-block-a">
-					<select id="periodo" class="opcoes-notas">
-						<option selected>Periodo:</option>
-					</select>
-				</div>
-				<div  class="ui-block-b">
-					<select id="disciplina" class="opcoes-notas">
-						<option selected>Disciplina:</option>
-					</select>
-				</div>
-			</div>
 
 
 			</div>
 			<div class="cabecalho_cursos">
 				<table style="width: 100%; padding: 5px;" class='ui-responsive'>
 					<tr style="color: #676665">
-						<td width="60%"><h1>Sistemas Para Internet</h1></td>
+						<td width="60%"><h1 id="nome_curso_section">Sistemas Para Internet</h1></td>
 						<td width="20%" style="text-align: center"><h3>Média</h3></td>
 						<td width="20%" style="text-align: center"><h3>Faltas</h3></td>
 					</tr>
-
 				</table>
 			</div>
-			<div class="mostra_detalhes_curso"
+			<div id="mostra_detalhes_curso"
 				style="margin: 0 auto; position: relative;">
 				<table style="width: 100%; padding: 5px;" class='ui-responsive'>
 					<tr>
@@ -182,9 +181,7 @@
 						<td class="campo_nota">10,0</td>
 						<td class="campo_nota">5</td>
 					</tr>
-
 				</table>
-
 			</div>
 
 		</div>
