--- a/unaspmobile/apps/unaspmobile/common/index.html
+++ b/unaspmobile/apps/unaspmobile/common/index.html
@@ -92,7 +92,7 @@
 						<p id="display-email-user"></p></li>
 				</ul>
 			</div>
-			<div class="ui-grid-solo options" style="max-width: 400px;">
+			<div class="ui-grid-solo options">
 				<div class=" ui-block-a options">
 					<div data-role="collapsible" data-collapsed-icon="carat-d"
 						data-expanded-icon="carat-u" id="cursos-matriculados">
@@ -175,13 +175,7 @@
 			</div>
 			<div id="mostra_detalhes_curso"
 				style="margin: 0 auto; position: relative;">
-				<table style="width: 100%; padding: 5px;" class='ui-responsive'>
-					<tr>
-						<td class="campo_nota_titulo">Algoritimo</td>
-						<td class="campo_nota">10,0</td>
-						<td class="campo_nota">5</td>
-					</tr>
-				</table>
+				
 			</div>
 
 		</div>
