--- a/unaspmobile/apps/unaspmobile/common/index.html
+++ b/unaspmobile/apps/unaspmobile/common/index.html
@@ -107,8 +107,6 @@
 						data-expanded-icon="carat-u">
 						<h3>Unasp Virtual</h3>
 						<ul>
-							<li>Sistemas Para Internet</li>
-							<li>Direito</li>
 						</ul>
 					</div>
 				</div>
@@ -139,27 +137,28 @@
 		<div data-role="content" class="content-unaspmobile"
 			style="padding: 15px">
 			<div class="seleciona_curso" style="margin: 0; position: relative;">
-				<div class="ui-grid-a">
+				<div class="ui-grid-solo">
 					<div class="ui-block-a">
-						<select id="curso" class="opcoes-notas">
+						<select id="curso" class=" ">
 							<option selected value=''>Curso:</option>
 						</select>
 					</div>
-					<div class="ui-block-b">
-						<select id="turma" class="opcoes-notas">
-							<option selected>Turma:</option>
-						</select>
-					</div>
 					<div class="ui-block-a">
-						<select id="periodo" class="opcoes-notas">
+						<select id="periodo" class="">
 							<option selected>Periodo:</option>
 						</select>
 					</div>
-					<div class="ui-block-b">
-						<select id="disciplina" class="opcoes-notas">
-							<option selected>Disciplina:</option>
+					<div class="ui-block-a">
+						<select id="turma" class="">
+							<option selected>Turma:</option>
 						</select>
 					</div>
+					
+					<!--  <div class="ui-block-b">
+						<select id="disciplina" class="" >
+							<option selected>Disciplina:</option>
+						</select>
+					</div>-->
 				</div>
 
 
@@ -167,11 +166,12 @@
 			<div class="cabecalho_cursos">
 				<table style="width: 100%; padding: 5px;" class='ui-responsive'>
 					<tr style="color: #676665">
-						<td width="60%"><h1 id="nome_curso_section">Sistemas Para Internet</h1></td>
+						<td width="60%"><h1 id="nome_curso_section">Curso</h1></td>
 						<td width="20%" style="text-align: center"><h3>Média</h3></td>
 						<td width="20%" style="text-align: center"><h3>Faltas</h3></td>
 					</tr>
 				</table>
+				
 			</div>
 			<div id="mostra_detalhes_curso"
 				style="margin: 0 auto; position: relative;">
