--- a/unaspmobile/apps/unaspmobile/common/index.html
+++ b/unaspmobile/apps/unaspmobile/common/index.html
@@ -193,15 +193,13 @@
 		<div data-role="content" class="content-unaspmobile"
 			style="padding: 15px">
 			<div class="ui-grid-solo">
-				<div class="ui-block-a">
-					 <select name="select" id="option-ano">
-				<option value="option">Ano</option>
-
-			</select>
+				<div class="ui-block-b">
+					<select name="select" id="option-ano">
+						<option value="option">Ano</option>
+					</select>
 				</div>
 			</div>
-			<div id="resultFinanceiro"></div>
-
+		<div id='conteudo-financeiro'></div>
 		</div>
 	</div>
 	<!--/FINANCEIRO-->
@@ -225,7 +223,7 @@
 	<script src="js/main.js"></script>
 	<script src="js/functions.js"></script>
 	<script src="js/view/notas.js"></script>
-		<script src="js/view/financeiro.js"></script>
+	<script src="js/view/financeiro.js"></script>
 	<script src="js/controller/perfil.js"></script>
 	<script src="js/controller/notas.js"></script>
 	<script src="js/controller/financeiro.js"></script>
