--- a/unaspmobile/apps/unaspmobile/common/index.html
+++ b/unaspmobile/apps/unaspmobile/common/index.html
@@ -139,7 +139,7 @@
 			<div class="seleciona_curso" style="margin: 0; position: relative;">
 				<div class="ui-grid-solo">
 					<div class="ui-block-a">
-						<select id="curso" class=" ">
+						<select id="curso">
 							<option selected value=''>Curso:</option>
 						</select>
 					</div>
@@ -195,7 +195,7 @@
 			<div class="ui-grid-solo">
 				<div class="ui-block-b">
 					<select name="select" id="option-ano">
-						<option value="option">Ano</option>
+						<option value="">Ano</option>
 					</select>
 				</div>
 			</div>
