--- a/unaspmobile/apps/unaspmobile/common/index.html
+++ b/unaspmobile/apps/unaspmobile/common/index.html
@@ -22,20 +22,23 @@
 	<div data-role="header" id="header-menu" data-position="fixed"
 		data-fullscreen="true"
 		style="position: fixed; z-index: 9999; width: 100%; margin: 0">
-		<div class="botoes-menu">
-			<ul class="ui-grid-d ui-content">
+		<div class="">
+			<ul id="outro" class="ui-grid-d ui-content botoes-menu">
+				<li class="ui-block-a effect "></li>
 				<li class="ui-block-a"><a href="" data-transition="slide"><img
-						src="images/logo_mini.png"></a></li>
-				<li class="ui-block-b"><a href="#perfil"
-					data-transition="slide"><img src="images/icones/user.png"></a></li>
+						src="images/logo_mini.png" name="logo_mini"></a></li>
+				<li class="ui-block-b menu-perfil"><a href="#perfil"
+					data-transition="slide"><img src="images/icones/user.png" name="user"></a></li>
 				<li class="ui-block-c"><a href="#notas" data-transition="slide"><img
-						src="images/icones/notas.png"></a></li>
+						src="images/icones/notas.png" name="notas"></a></li>
 				<li class="ui-block-d"><a href="#financeiro"
-					data-transition="slide"><img src="images/icones/financeiro.png"></a></li>
+					data-transition="slide"><img src="images/icones/financeiro.png" name="financeiro"></a></li>
 				<li class="ui-block-e"><a href="#ramais"
-					data-transition="slide"><img src="images/icones/ramal.png"></a></li>
+					data-transition="slide"><img src="images/icones/ramal.png" name="ramal"></a></li>
 			</ul>
+		
 		</div>
+	
 	</div>
 	<!-- /header fixo -->
 
