--- a/unaspmobile/apps/unaspmobile/common/index.html
+++ b/unaspmobile/apps/unaspmobile/common/index.html
@@ -18,10 +18,10 @@
 <script src="jqueryMobile/jquery.mobile-git.js"></script>
 </head>
 <body style="display: none;">
-<div style="display:none" class="messages ui-icon-alert ui-btn-icon-left" id="messages">
-<p></p>
-</div>
-
+	<div style="display: none"
+		class="messages ui-icon-alert ui-btn-icon-left" id="messages">
+		<p></p>
+	</div>
 	<!-- header fixo -->
 	<div data-role="header" id="header-menu" data-position="fixed"
 		data-fullscreen="true"
@@ -32,17 +32,20 @@
 				<li class="ui-block-a"><a href="" data-transition="slide"><img
 						src="images/logo_mini.png" name="logo_mini"></a></li>
 				<li class="ui-block-b menu-perfil"><a href="#perfil"
-					data-transition="slide"><img src="images/icones/user.png" name="user"></a></li>
+					data-transition="slide"><img src="images/icones/user.png"
+						name="user"></a></li>
 				<li class="ui-block-c"><a href="#notas" data-transition="slide"><img
 						src="images/icones/notas.png" name="notas"></a></li>
 				<li class="ui-block-d"><a href="#financeiro"
-					data-transition="slide"><img src="images/icones/financeiro.png" name="financeiro"></a></li>
+					data-transition="slide"><img src="images/icones/financeiro.png"
+						name="financeiro"></a></li>
 				<li class="ui-block-e"><a href="#ramais"
-					data-transition="slide"><img src="images/icones/ramal.png" name="ramal"></a></li>
+					data-transition="slide"><img src="images/icones/ramal.png"
+						name="ramal"></a></li>
 			</ul>
-		
+
 		</div>
-	
+
 	</div>
 	<!-- /header fixo -->
 
@@ -71,6 +74,12 @@
 			</div>
 		</div>
 		<div data-role="content" id="content-login" style="padding: 15px">
+			
+			<div class="loadMobile">
+				<img src="images/icones/loading.gif">
+				<h3></h3>
+			</div>
+			
 			<form id="form" action="">
 				<label for="text">Login:</label><input type="text" name="user"
 					id="user"> <label for="text">Senha:</label><input
@@ -205,7 +214,7 @@
 					</select>
 				</div>
 			</div>
-		<div id='conteudo-financeiro'></div>
+			<div id='conteudo-financeiro'></div>
 		</div>
 	</div>
 	<!--/FINANCEIRO-->
