--- a/unaspmobile/apps/unaspmobile/common/index.html
+++ b/unaspmobile/apps/unaspmobile/common/index.html
@@ -155,19 +155,19 @@
 			<div class="seleciona_curso" style="margin: 0; position: relative;">
 				<div class="ui-grid-solo">
 					<div class="ui-block-a">
-						<select id="curso">
-							<option selected value=''>Curso:</option>
+						<select id="curso"  data-native-menu="false">
+							<option selected value='curso'>Curso:</option>
 						</select>
 					</div>
 					<br>
 					<div class="ui-block-a">
-						<select id="periodo" class="">
+						<select id="periodo" >
 							<option selected>Periodo:</option>
 						</select>
 					</div>
 					<br>
 					<div class="ui-block-a">
-						<select id="turma" class="">
+						<select id="turma" >
 							<option value="turma">Turma:</option>
 						</select>
 					</div>
@@ -183,7 +183,7 @@
 			<div class="cabecalho_cursos">
 				<table style="width: 100%; padding: 5px;" class='ui-responsive'>
 					<tr style="color: #676665">
-						<td width="60%"><h1 id="nome_curso_section">Curso</h1></td>
+						<td width="60%"><h3 id="nome_curso_section">Curso</h3></td>
 						<td width="20%" style="text-align: center"><h3>Média</h3></td>
 						<td width="20%" style="text-align: center"><h3>Faltas</h3></td>
 					</tr>
